--- a/templates/index.html
+++ b/templates/index.html
@@ -1703,6 +1703,8 @@
         }
 
         @media (max-width: 768px) {
+            .preloader-subtitle { display: none; }
+
             .whatsapp-button {
                 display: none;
             }
